Ejercicio 1 del tema 4 psyp terminado

--- a/src/tarea4_1/Servidor.form
+++ b/src/tarea4_1/Servidor.form
@@ -72,6 +72,9 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="tfServidor">
+          <AuxValues>
+            <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="10"/>
+          </AuxValues>
         </Component>
       </SubComponents>
     </Container>
